# routes/product-postgres.js
@@ -43,6 +43,19 @@ router.get('/:id/buyers', async(req, res, next) => {
     }
 });
 
+router.get('/:id/getFollowersByProduct', async(req, res, next) => {
+    // #swagger.tags = ['Postgres/Products']
+    try {
+        if (req.query.userId && req.query.maxLevels) {
+            res.status(200).json(await products.getFollowersByProduct(req.params.id, req.query.userId, req.query.maxLevels));
+        } else {
+            res.status(200).json({ error: 'Missing query parameter' });
+        }
+    } catch (e) {
+        next(e);
+    }
+});
+
 router.put('/:id', async(req, res, next) => {
     // #swagger.tags = ['Postgres/Products']
     try {
@@ -56,19 +69,6 @@ router.delete('/:id', async(req, res, next) => {
     // #swagger.tags = ['Postgres/Products']
     try {
         res.status(200).json(await products.remove(req.params.id));
-    } catch (e) {
-        next(e);
-    }
-});
-
-router.get('/:id/getFollowersByProduct', async(req, res, next) => {
-    // #swagger.tags = ['Postgres/Products']
-    try {
-        if (req.query.userId && req.query.maxLevels) {
-            res.status(200).json(await products.getFollowersByProduct(req.params.id, req.query.userId, req.query.maxLevels));
-        } else {
-            res.status(200).json({ error: 'Missing query parameter' });
-        }
     } catch (e) {
         next(e);
     }
