# routes/user-neo4j.js
@@ -19,7 +19,7 @@ router.post('/', async(req, res, next) => {
 router.get('/', async(req, res, next) => {
     // #swagger.tags = ['Neo4j/Users']
     try {
-        res.status(200).json(await users.findAll10(req.query.skip, req.query.take));
+        res.status(200).json(await users.findTenNodes(req.query.skip, req.query.take));
     } catch (e) {
         next(e);
     }
